# phone-webcam

./: README.md
android/PhoneWebcam/: .gitignore  .gitmodules  settings.gradle.kts
android/PhoneWebcam/app/: build.gradle.kts  proguard-rules.pro
android/PhoneWebcam/app/src/main/cpp/: CMakeLists.txt  jpeg_encoder_jni.cpp  srtp_jni.cpp
android/PhoneWebcam/gradle/: libs.versions.toml
android/PhoneWebcam/gradle/wrapper/: gradle-wrapper.properties
obs-plugin/phone-webcam-obs/: .gitignore  CMakeLists.txt  README.md  SETUP.md
obs-plugin/phone-webcam-obs/backups/2nd backup pre-security patch/: h264-decoder.cpp  handshake-server.cpp  handshake-server.h  phone-source.cpp  phone-source.h
obs-plugin/phone-webcam-obs/backups/authentication/: handshake-client.cpp  handshake-server.cpp  handshake-server.h  jpeg-decoder.h  mdns-discovery.cpp  phone-source.cpp  phone-source.h  rtp-receiver.cpp  rtp-receiver.h
obs-plugin/phone-webcam-obs/backups/backup-20260219-090804/: handshake-client.cpp  handshake-client.h  jpeg-decoder.cpp  jpeg-decoder.h  mdns-discovery.cpp  phone-source.cpp  phone-source.h  udp-receiver.cpp
obs-plugin/phone-webcam-obs/backups/semistable auto connect/: handshake-client.cpp  mdns-discovery.cpp  (+3 more)
obs-plugin/phone-webcam-obs/src/: aac-decoder.cpp  aac-decoder.h  auth.h  frame-decoder.h  h264-decoder.cpp  h264-decoder.h  handshake-client.cpp  handshake-client.h  handshake-server.cpp  handshake-server.h  mdns-discovery.cpp  phone-source.cpp  phone-source.h  rtp-receiver.cpp  rtp-receiver.h  srtp-session.cpp  srtp-session.h  udp-receiver.cpp
(+34 files in other folders)
